<resources>
    <string name="app_name">Concept</string>
    <string name="logo_description">Concept Logo</string>

    <string name="logo">Logo</string>
    <string name="letter_C">C</string>
    <string name="word_oncept">oncept</string>

    <string name="username_label">Username</string>
    <string name="username_hint"></string>
    <string name="password_label">Password</string>
    <string name="password_hint"></string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="sign_in_button"><u>New player? Sign in</u></string>

    <string name="new_game">Create a <br></br>new game</string>
    <string name="join_game">Join a game</string>
    <string name="add_friend">Search a new friend…</string>
    <string name="add_friend_button">Add</string>


    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="change_picture">Change</string>
    <string name="audio_label">Audio</string>
    <string name="music_switch">Music</string>
    <string name="sounds_switch">Sounds</string>
    <string name="username_profile_picture">Username profile picture</string>
    <string name="friend_profile_picture">Friend profile picture</string>

    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="new_game_lobby">Ready to play Concept</string>
    <string name="start_game">Start Game</string>
    <string name="online_friends">Friends Online</string>


    <string name="turn_string">Turno 1</string>
    <string name="ready">Ready!</string>

    <string name="prompter_turn_sentence">Select some clues for your turn!</string>
    <string name="player_turn_sentence">Try to guess the word or the sentence!</string>
</resources>