<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewGame"
    android:backgroundTint="#99FFFFFF"
    android:backgroundTintMode="src_over"
    android:background="@drawable/point_concept">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="409dp"
        android:layout_height="98dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#8AFFFFFF"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_button"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/londrina_outline"
            android:gravity="center_horizontal"
            android:insetLeft="10sp"
            android:insetTop="3dp"
            android:insetBottom="6dp"
            android:text="@string/letter_C"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:cornerRadius="50sp" />

        <TextView
            android:id="@+id/menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-70dp"
            android:layout_marginLeft="-70dp"
            android:layout_marginTop="18dp"
            android:clickable="false"
            android:fontFamily="@font/londrina_outline"
            android:gravity="start"
            android:letterSpacing="0.3"
            android:outlineProvider="none"
            android:selectAllOnFocus="false"
            android:text="@string/word_oncept"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="46sp"
            android:textStyle="bold"
            android:translationX="70dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_friends_layout"
        android:layout_width="358dp"
        android:layout_height="249dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/friends_ready_layout"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="@+id/friends_ready_layout"
        app:layout_constraintTop_toBottomOf="@+id/friends_ready_layout"
        app:layout_constraintVertical_bias="0.698">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/online_friends_list_view"
            android:layout_width="355dp"
            android:layout_height="207dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/add_friends_list_row" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="10dp"
            android:text="@string/online_friends"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/online_friends_list_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="@+id/online_friends_list_view"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/friends_ready_layout"
        android:layout_width="317dp"
        android:layout_height="307dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

        <TextView
            android:id="@+id/lobby_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/new_game_lobby"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ready_friends_list_view"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lobby_label"
            tools:listitem="@layout/ready_friends_list_row" />

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="110dp"
            android:layout_marginRight="110dp"
            android:layout_marginBottom="15dp"
            android:paddingLeft="36dp"
            android:paddingTop="7dp"
            android:paddingRight="36dp"
            android:paddingBottom="7dp"
            android:text="@string/start_game"
            app:backgroundTint="#266A09"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ready_friends_list_view"
            app:layout_constraintVertical_bias="0.153" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>